# melange-for-react-devs

./: .gitignore  404.html  CNAME  Index.re  Makefile  README.html  README.md  dune  dune-project  hashmap.json  index.html  melange-for-react-devs.opam  package-lock.json  package.json  todo.html  vite.config.js  vite.config.mjs  webpack.config.js
.github/workflows/: deploy.yml
assets/: README.md.3ce0111a.js  README.md.3ce0111a.lean.js  README.md.461d564e.js  README.md.461d564e.lean.js  app.1d78e2a5.js  app.6719d226.js  app.7e8a5929.js  app.856d9ef0.js  app.9b1a22d8.js  app.c5ec69da.js  better-burgers_index.md.02b57464.js  better-burgers_index.md.02b57464.lean.js  better-burgers_index.md.24a5a4bb.js  better-burgers_index.md.24a5a4bb.lean.js  better-burgers_index.md.5434ce8e.js  better-sandwiches_index.md.5a11f0d0.js  better-sandwiches_index.md.e6d0ab12.js  better-sandwiches_index.md.e6d0ab12.lean.js  better-sandwiches_index.md.f9329d32.js  better-sandwiches_index.md.f9329d32.lean.js  burger-discounts_index.md.1bcbc1bd.js  burger-discounts_index.md.1bcbc1bd.lean.js  burger-discounts_index.md.e5af0856.js  burger-discounts_index.md.fd4cd183.js  celsius-converter-exception_index.md.3ab4d8d6.js  celsius-converter-exception_index.md.3ab4d8d6.lean.js  celsius-converter-exception_index.md.4c5dd670.js  celsius-converter-exception_index.md.4c5dd670.lean.js  celsius-converter-exception_index.md.a3aa5d66.js  celsius-converter-exception_index.md.a3aa5d66.lean.js  celsius-converter-exception_index.md.ca6510ca.js  celsius-converter-exception_index.md.ca6510ca.lean.js  celsius-converter-option_index.md.15143178.js  celsius-converter-option_index.md.15143178.lean.js  celsius-converter-option_index.md.57570bad.js  celsius-converter-option_index.md.57570bad.lean.js  celsius-converter-option_index.md.dc211e69.js  celsius-converter-option_index.md.dc211e69.lean.js  celsius-converter-option_index.md.fa830825.js  counter_index.md.6ca0403b.js  (+83 more)
assets/chunks/: @localSearchIndexroot.48f8c688.js  @localSearchIndexroot.80edc455.js  @localSearchIndexroot.ac478adc.js  @localSearchIndexroot.b88dc2c5.js  @localSearchIndexroot.f229bf36.js  @localSearchIndexroot.f958053c.js  VPLocalSearchBox.059af068.js  VPLocalSearchBox.0795ce25.js  VPLocalSearchBox.371d2cb9.js  VPLocalSearchBox.6d8ed502.js  VPLocalSearchBox.99e884ab.js  VPLocalSearchBox.c7ef497c.js  theme.3704c4c0.js  theme.371e0641.js  theme.53197a9e.js  theme.9e500830.js  theme.aa723650.js  theme.b7c579a6.js
better-burgers/: index.html
better-sandwiches/: index.html
burger-discounts/: index.html
celsius-converter-exception/: index.html
celsius-converter-option/: index.html
counter/: index.html
cram-tests/: index.html
demo/: index.html
demo/assets/: better-burgers-BXGsDjw4.js  better-burgers-CNXWhzc9.js  better-burgers-L4sHsYg_.js  better-sandwiches-BZU0oh5Z.js  better-sandwiches-C_LiOAFQ.js  better-sandwiches-zn4Z-P6F.js  burger-discounts-BpZz0bBh.js  burger-discounts-DV4F4ZbJ.js  celsius-converter-exception-C13dQWlh.js  celsius-converter-exception-f7fOEI5C.js  celsius-converter-option-BJchKZ5_.js  celsius-converter-option-TjlV5jnr.js  client-T0GC07Z7.js  counter-PyzJXWgk.js  counter-lT5-XW_m.js  cram-tests-UTTFXLPe.js  emotion-css.esm-B9O-oefW.js  emotion-css.esm-CyKO9Gbp.js  numeric-types-BHI6q1s2.js  numeric-types-_9R86cot.js  order-confirmation-Skzggiu3.js  order-confirmation-nrozWJ4p.js  order-with-promo-CBLsQM7j.js  order-with-promo-D2H_GoKw.js  promo-codes-BHXzwK2x.js  promo-codes-C2if75na.js  promo-component-BOgA9Y9W.js  promo-component-Cg13k16N.js  promo-component-FJDoiz-4.js  sandwich-tests-C16KE3nv.js  sandwich-tests-CO76Los3.js  sandwich-tests-VGVBEaPc.js  styling-with-css-14ani3dg.css  styling-with-css-BjBpQXsg.js  styling-with-css-Fholx3v_.js
discounts-lists/: index.html
docs/: Makefile  README.md  bun.lockb  celsius-converter-exception.md  celsius-converter-option.md  counter.md  index.md  installation.md  intro.md  melange-playground.md  numeric-types.md  package-lock.json  package.json  todo.md
docs/.vitepress/: config.js
docs/better-burgers/: Item.re  index.md
docs/better-sandwiches/: Item.re  index.md
docs/burger-discounts/: Discount.re  DiscountTests.re  Item.re  index.md
docs/celsius-converter-exception/: Snippets.re  index.md
docs/celsius-converter-option/: Snippets.re  index.md
docs/counter/: Snippets.re  index.md
docs/coupon-codes/: index.md
docs/cram-tests/: BurgerTests.re  Item.re  diff  index.md  initial-diff  tests
docs/discounts-lists/: Discount.re  DiscountTests.re  Order.re  dune  index.md
docs/installation/: index.md
docs/intro/: index.md
docs/intro-to-dune/: index.md
docs/numeric-types/: Snippets.re  index.md
docs/order-confirmation/: Index.re  Item.re  Order.re  Snippets.re  index.md
docs/order-with-promo/: App.re  DateInput.re  Demo.re  Discount.re  DiscountTests.re  Index.re  ListSafe.re  Order.re  Promo.re  RR.re  Types.re  dune  index.md
docs/poly-to-normal-variant/: Discount.re  Item.re  Promo.re  Promo2.re  RR.re  index.md  type-error.txt
docs/promo-codes/: Discount.re  DiscountTests.re  index.md
docs/promo-component/: Discount.re  DiscountTests.re  Index.re  Item.re  Order.re  Promo.re  RR.re  dune  index.md
docs/sandwich-tests/: Item.re  SandwichTests.re  index.md
installation/: index.html
intro/: index.html
intro-to-dune/: index.html
numeric-types/: index.html
order-confirmation/: index.html
order-with-promo/: index.html
promo-codes/: index.html
promo-component/: index.html
public/: index.html
sandwich-tests/: index.html
src/: dune
src/burger-discounts/: Array.re  BurgerTests.re  Discount.re  DiscountTests.re  Format.re  Index.re  Item.re  Order.re  Tests.re  dune  index.html  order.module.css  tests.t
src/burger-discounts/lib/: Discount.re  dune
src/burger-discounts/tests/: Test.re  dune
src/celsius-converter-exception/: CelsiusConverter.re  Index.re  Makefile  dune  index.html
src/sandwich-tests/: BurgerTests.re  Item.re  SandwichTests.re  dune  index.html  tests.t
styling-with-css/: index.html
test/: dune  quickstart.re
(+136 files in other folders)
