opam-version: "2.0"
synopsis: "Melange for React Developers"
description: "Source code for Melange For React Developers Guide"
maintainer: ["Feihong Hsu <feihong.hsu@gmail.com>"]
authors: ["Feihong Hsu <feihong.hsu@gmail.com>"]
license: "MIT"
homepage: "https://github.com/melange-re/melange-for-react-devs"
bug-reports: "https://github.com/melange-re/melange-for-react-devs"
depends: [
  "ocaml" {>= "5.1.0"}
  "reason" {>= "3.10.0"}
  "dune" {>= "3.8"}
  "melange" {>= "2.0.0"}
  "reason-react" {>= "0.13.0"}
  "reason-react-ppx"
  "opam-check-npm-deps" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "ocaml-lsp-server" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "dot-merlin-reader" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "odoc" {with-doc}
]
dev-repo: "git+https://github.com/melange-re/melange-for-react-devs.git"
