opam-version: "2.0"
synopsis: "Melange for React Developers"
description: "Source code for Melange For React Developers book"
maintainer: ["Feihong Hsu <feihong.hsu@ahrefs.com>"]
authors: ["Feihong Hsu <feihong.hsu@ahrefs.com>"]
license: "MIT"
homepage: "https://github.com/melange-re/melange-for-react-devs"
bug-reports: "https://github.com/melange-re/melange-for-react-devs"
pin-depends: [
  [ "melange-fest.dev" "https://github.com/jchavarri/melange-fest/archive/751c5b3aa24734e662dc0a38ad0bde880f4bbf33.tar.gz" ]
]
depends: [
  "ocaml" {>= "5.1.1"}
  "reason" {>= "3.10.0"}
  "dune" {>= "3.8"}
  "melange" {>= "3.0.0-51"}
  "reason-react" {>= "0.14.0"}
  "reason-react-ppx" {>= "0.14.0"}
  "melange-fest" {>= "0.1.0"}
  "opam-check-npm-deps" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "ocaml-lsp-server" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "dot-merlin-reader" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "odoc" {with-doc}
  "melange-fest"
]
dev-repo: "git+https://github.com/melange-re/melange-for-react-devs.git"
