opam-version: "2.0"
synopsis: "Melange for React Developers"
description: "Source code for Melange For React Developers Guide"
maintainer: ["Feihong Hsu <feihong.hsu@gmail.com>"]
authors: ["Feihong Hsu <feihong.hsu@gmail.com>"]
license: "MIT"
homepage: "https://github.com/melange-re/melange-for-react-devs"
bug-reports: "https://github.com/melange-re/melange-for-react-devs"
depends: [
  "ocaml" {>= "5.1.1"}
  "reason" {>= "3.10.0"}
  "dune" {>= "3.8"}
  "melange" {>= "3.0.0-51"}
  "reason-react" {>= "0.14.0"}
  "reason-react-ppx" {>= "0.14.0"}
  "opam-check-npm-deps" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "ocaml-lsp-server" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "dot-merlin-reader" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "odoc" {with-doc}
  "melange-fest" {>= "0.1"}
]
dev-repo: "git+https://github.com/melange-re/melange-for-react-devs.git"
pin-depends: [
  ["reason-react.dev" "https://github.com/reasonml/reason-react/archive/47da6ae6e11d49363d59313b9fe5c5968ba13045.tar.gz"]
  ["reason-react-ppx.dev" "https://github.com/reasonml/reason-react/archive/47da6ae6e11d49363d59313b9fe5c5968ba13045.tar.gz"]
  ["melange-fest.dev" "https://github.com/jchavarri/melange-fest/archive/fd1dfbad1bfb81730515ef0caba8c3040f7d40cc.tar.gz"]
]
