(melange.emit
 (target output)
 (libraries reason-react melange-fest)
 (preprocess
  (pps melange.ppx reason-react-ppx))
 (module_systems
  (es6 mjs))
 (runtime_deps
  (glob_files *.css)))

(rule
 (alias runtest)
 (deps
  ; (alias melange)
  Discount.re
  (:input ./output/src/burger-discounts/Test.mjs)
  %{bin:node})
 (action
  (run time %{bin:node} %{input})))
