(melange.emit
 (target output)
 (libraries reason-react melange-fest)
 (preprocess
  (pps melange.ppx reason-react-ppx))
 (module_systems
  (es6 mjs))
 (runtime_deps
  (glob_files *.css)))

(rule
 (alias runtest)
 (deps Discount.re)
 (action
  (run time node %{dep:./output/src/burger-discounts/DiscountTests.mjs})))
