(melange.emit
 (target output)
 (libraries reason-react melange-fest)
 (preprocess
  (pps melange.ppx reason-react-ppx))
 (module_systems
  (es6 mjs))
 (runtime_deps
  (glob_files *.css)))

(rule
 (alias runtest)
 (deps
  Item.re
  (:input ./output/src/sandwich-tests/SandwichTests.mjs))
 (action
  (run time node %{input})))

(rule
 (alias runtest)
 (deps
  Item.re
  (:input ./output/src/sandwich-tests/BurgerTests.mjs))
 (action
  (run time node %{input})))
