(melange.emit
 (target output)
 (libraries reason-react melange-fest)
 (preprocess
  (pps melange.ppx reason-react-ppx))
 (module_systems
  (es6 mjs))
 (runtime_deps
  (glob_files *.css)))

(rule
 (alias runtest)
 (deps
  (alias melange))
 (action
  (run node ./output/src/sandwich-tests/SandwichTests.mjs)))

(rule
 (alias runtest)
 (deps
  (alias melange))
 (action
  (run node ./output/src/sandwich-tests/BurgerTests.mjs)))
